# octoblox

./: .travis.yml  LICENSE  Pipfile  README.md  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
octoblox/: __init__.py
tests/: conftest.py  test_delegated_provider.py  test_infoblox_provider.py
tests/config/: 12.11.10.in-addr.arpa.yaml  create.tests.yaml  f.e.d.c.b.a.9.8.7.6.5.4.3.2.1.0.ip6.arpa.yaml  unit.tests.yaml
tests/delegated/: unit.tests.yaml
