[bdist_wheel]
universal = 1

[metadata]
name = octoblox
author = asyncon
author_email = 53700266+asyncon@users.noreply.github.com
description = Infoblox provider for octoDNS
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
url = https://github.com/asyncon/octoblox
project_urls =
    Bug Tracker = https://github.com/asyncon/octoblox/issues
    Documentation = https://github.com/asyncon/octoblox
    Source Code = https://github.com/asyncon/octoblox
requires_python = >=3.6
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: System Administrators
    Topic :: Internet :: Name Service (DNS)
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = True
packages =
    octoblox
